Naive Bayes Classifier

--- a/EM, K-means.ipynb
+++ b/EM, K-means.ipynb
@@ -50,8 +50,7 @@
     "X = pd.DataFrame(iris.data)\n",
     "X.columns = ['Sepal_Length','Sepal_Width','Petal_Length','Petal_Width']\n",
     "y = pd.DataFrame(iris.target)\n",
-    "y.columns = ['Targets']\n",
-    "\n"
+    "y.columns = ['Targets']"
    ]
   },
   {
