ANN remaining A-Star, AO-Star and ID3

--- a/Candidate Elimination.ipynb
+++ b/Candidate Elimination.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Sunny', 'Warm', 'Normal', 'Strong', 'Warm', 'Same', '1']\n",
-      "['Sunny', 'Warm', 'High', 'Strong', 'Warm', 'Same', '1']\n",
-      "['Rainy', 'Cold', 'High', 'Strong', 'Warm', 'Change', '0']\n",
-      "['Sunny', 'Warm', 'High', 'Strong', 'Cool', 'Change', '1']\n",
-      "6\n"
+      "['Some', 'Small', 'No', 'Affordable', 'One', '0']\n",
+      "['Many', 'Big', 'No', 'Expensive', 'Many', '0']\n",
+      "['Many', 'Medium', 'No', 'Expensive', 'Few', '1']\n",
+      "['Many', 'Small', 'No', 'Affordable', 'Few', '1']\n",
+      "5\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
     "attr = []\n",
-    "with open('datasets/enjoysport.csv','r') as csvFile:\n",
+    "with open('datasets/testData.csv','r') as csvFile:\n",
     "    reader = csv.reader(csvFile)\n",
     "    dataset = [list(line) for line in reader]\n",
     "    for row in dataset[1:]:\n",
@@ -32,50 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Specific :  ['0', '0', '0', '0', '0', '0']\n",
-      "General :  ['?', '?', '?', '?', '?', '?']\n"
+      "Specific :  ['0', '0', '0', '0', '0']\n",
+      "General :  ['?', '?', '?', '?', '?']\n"
      ]
     }
    ],
    "source": [
     "# Initial Value of the Hypothesis\n",
     "specific = ['0']*numAttr\n",
-    "general =['?']*numAttr\n",
+    "general = ['?']*numAttr\n",
     "print(\"Specific : \", specific)\n",
     "print(\"General : \", general)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sunny', 'Warm', 'Normal', 'Strong', 'Warm', 'Same']\n"
-     ]
-    }
-   ],
-   "source": [
-    "for ptr in range(len(attr)):\n",
-    "    if attr[ptr][numAttr]==\"1\":\n",
-    "        specific = attr[ptr][0:numAttr]\n",
-    "        break\n",
-    "print(specific)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -83,18 +69,18 @@
      "output_type": "stream",
      "text": [
       "Candidate Elemination Version Space\n",
-      "For positive training example no. 1 the hypothesis is S1 ['Sunny', 'Warm', '?', 'Strong', '?', '?']\n",
-      "For positive training example no. 1 the hypothesis is S1 ['?', '?', '?', '?', '?', '?']\n",
-      "For positive training example no. 2 the hypothesis is S2 ['Sunny', 'Warm', '?', 'Strong', '?', '?']\n",
-      "For positive training example no. 2 the hypothesis is S2 ['?', '?', '?', '?', '?', '?']\n",
-      "For positive training example no. 4 the hypothesis is S4 ['Sunny', 'Warm', '?', 'Strong', '?', '?']\n",
-      "For positive training example no. 4 the hypothesis is S4 [['Sunny', '?', '?', '?', '?', '?'], ['?', 'Warm', '?', '?', '?', '?']]\n"
+      "For positive training example no. 3 the hypothesis is S3 ['Many', '?', 'No', '?', 'Few']\n",
+      "For positive training example no. 3 the hypothesis is S3 [['Many', '?', '?', '?', '?'], ['?', '?', '?', '?', 'Few']]\n",
+      "For positive training example no. 4 the hypothesis is S4 ['Many', '?', 'No', '?', 'Few']\n",
+      "For positive training example no. 4 the hypothesis is S4 [['Many', '?', '?', '?', '?'], ['?', '?', '?', '?', 'Few']]\n"
      ]
     }
    ],
    "source": [
     "print(\"Candidate Elemination Version Space\")\n",
     "temp = []\n",
+    "\n",
+    "\n",
     "for itr in range(len(attr)):\n",
     "    if attr[itr][numAttr] == \"1\":\n",
     "        for ptr in range(numAttr):\n",
@@ -113,21 +99,22 @@
     "        for ptr in range(numAttr):\n",
     "            if specific[ptr]!=attr[itr][ptr] and specific[ptr]!='?':\n",
     "                general[ptr] = specific[ptr]\n",
-    "                temp.append(general)\n",
+    "                if general not in temp:\n",
+    "                    temp.append(general)\n",
     "                general = ['?']*numAttr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Specific Hypothesis is S4 ['Sunny', 'Warm', '?', 'Strong', '?', '?']\n",
-      "General Hypothesis is G4 [['Sunny', '?', '?', '?', '?', '?'], ['?', 'Warm', '?', '?', '?', '?']]\n"
+      "Specific Hypothesis is S4 ['Many', '?', 'No', '?', 'Few']\n",
+      "General Hypothesis is G4 [['Many', '?', '?', '?', '?'], ['?', '?', '?', '?', 'Few']]\n"
      ]
     }
    ],
@@ -153,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
