--- a/Locally Weighted Regression.ipynb
+++ b/Locally Weighted Regression.ipynb
@@ -28,7 +28,6 @@
     "tou = 0.8 #Smoothening parameter\n",
     "\n",
     "x_train = np.array(list(range(5,50)) + [7.2,9.2])\n",
-    "x_train\n",
     "len(x_train)"
    ]
   },
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "f40ca6e5",
    "metadata": {},
    "outputs": [
@@ -118,14 +117,14 @@
    "source": [
     "y_train = np.array([1,2,1,2,1,1,3,4,5,6,1,5,12,23,65,7,8,10,8,29,24,12,14,12,10,9,7,10,24,50,19,20,30,12,24,35,12,80,20,30,12,23,23,45,23,12,12])\n",
     "print(len(y_train))\n",
-    "x_test = np.array([i/10. for i in range(400)])\n",
+    "x_test = np.array([i/10 for i in range(400)])\n",
     "x_test = x_test[:,np.newaxis]\n",
     "print(len(x_test))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "2e388552",
    "metadata": {},
    "outputs": [
@@ -148,7 +147,6 @@
     }
    ],
    "source": [
-    "count = 0\n",
     "y_test = []\n",
     "for r in range(len(x_test)):\n",
     "    try:\n",
